# wadelabs-ric

./: DEPLOY.md  README.md  __main__.py  pyproject.toml
marketing/: case_study_01_logout.md  case_study_02_double_charge.md  case_study_03_export_leak.md  landing_page.md  lead_magnet_flow.md  weekly_email_template.md
reports/templates/: integrity_snapshot.md
scripts/: get_stripe_ids.py  setup_stripe_products.py
tests/: test_policy_loads.py  test_runner_outputs.py
wadelabs_ric/: __init__.py  __main__.py  drift.py  evidence.py  gap_analysis.py  integrity_runner.py  models.py
wadelabs_ric/policy/: qa_integrity_policy.yaml
website/: case-files.html  drift.html  how-it-works.html  index.html  invariants.html  pricing.html  reports.html  snapshot.html  trust.html  what-we-find.html
website/js/: config.js  stripe.js
